# open-llms-txt

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  mise.toml  pyproject.toml
.github/workflows/: ci.yml
examples/: local_scraper.py  web_scraper.py
examples/flask_site/: complex_app.py  dummy_app.py
examples/static_site/: article.html  faq.html  index.html  pricing.html  quickstart.html
src/open_llms_txt/: html_parser.py  main.py
src/open_llms_txt/generator/: html_to_md.py  template_engine.py
src/open_llms_txt/generators/: html_to_md.py  template_engine.py
src/open_llms_txt/middleware/: flask.py
src/open_llms_txt/parsers/: html.py
src/open_llms_txt/scraper/: base_scraper.py  local_scraper.py  web_scraper.py
src/open_llms_txt/scrapers/: __init__.py  base_scraper.py  local_scraper.py  web_scraper.py
src/open_llms_txt/templates/: README.md  html_to_md.jinja  llms.txt.jinja  scraper_template.jinja
src/open_llms_txt/templates/partials/: links.jinja
src/open_llms_txt/web/: scraper.py
tests/generators/: test_html_to_md.py
tests/middleware/: test_flask.py
tests/parsers/: test_html.py
tests/scrapers/: test_local_scraper.py  test_web_scraper.py
